[MOD] Code Refactoring
- Chat instance
- Agent Creation
- Workflow definition
- Steps

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -10,25 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d497da45",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'agent_core'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mAssistant\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mARDIChat\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatAssistant\n\u001b[32m      3\u001b[39m chat = ChatAssistant()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Thesis/Thesis-AI/Assistant/ARDIChat.py:4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01muuid\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlogging\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mARDI\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Agent\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_config, Settings\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mconfigure_logging\u001b[39m():\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Thesis/Thesis-AI/Assistant/ARDI.py:8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Internal imports\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Settings, load_prompt\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mAssistant\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01magent_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mworkflow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Workflow\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mAssistant\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01magent_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01magent_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mplanner\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Plan  \n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# ==========================================================\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#  ARDI AGENT\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# ==========================================================\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Thesis/Thesis-AI/Assistant/agent_core/workflow.py:7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Settings, load_prompt\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Import core modules\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01magent_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mplanner\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m task_planning, validate_plan, validation_router\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01magent_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexecutor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m run_plan\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01magent_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mresponder\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generate_response, direct_response\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'agent_core'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Assistant.ARDIChat import ChatAssistant\n",
     "\n",
@@ -112,7 +97,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat.ask(\"What is the peak consumption hour?\")"
+    "chat.ask(\"What is the peak consumption hours?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c846fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat.ask(\"My name is Jose, what's your name?\")"
    ]
   }
  ],
