--- a/playground.ipynb
+++ b/playground.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d497da45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARDI Agent ready...\n"
+     ]
+    }
+   ],
    "source": [
     "from Assistant.ARDIChat import ChatAssistant\n",
     "\n",
@@ -87,25 +95,126 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat.ask(\"What topics that the users are the users consuming during the peak hours?\")"
+    "chat.ask(\"What topics are the users in the segment ‘Deutschland-Themen und Politik im Fokus’ consuming during the peak hours?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8bc947ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User question: What is the peak consumption hours?\n",
+      "\n",
+      "🧩 Plan generated successfully.\n",
+      "📍 Step update: {'task_planning': {'plan': [{'task': 'get_segment_time_activity', 'id': 'time_activity_segment11', 'analyze_answer': True, 'analyze_target_property': 'peak_activity', 'dep': [], 'args': [{'key': 'segment_id', 'value': '11'}]}]}}\n",
+      "✅ Plan validation passed.\n",
+      "➡️  Plan validated → executing plan.\n",
+      "📍 Step update: {'validate_plan': {'validation': True}}\n",
+      "✅ Executed: get_segment_time_activity | ID: time_activity_segment11\n",
+      "🧠 Triggering LLM analysis for 'time_activity_segment11'...\n",
+      "🧩 Analyzer LLM produced an updated plan successfully.\n",
+      "❌ Plan validation failed:\n",
+      "   - Task articles_segment11_peak depends on missing task 'time_activity_segment11'\n",
+      "⚠️ New plan failed validation, skipping update.\n",
+      "🏁 All tasks completed. Total plan versions: 1\n",
+      "📍 Step update: {'run_plan': {'outputs': {'time_activity_segment11': {'segment_id': 11, 'activity_by_hour': [{'hour': '00:00-00:59', 'reads': 3541}, {'hour': '01:00-01:59', 'reads': 2451}, {'hour': '02:00-02:59', 'reads': 2103}, {'hour': '03:00-03:59', 'reads': 3072}, {'hour': '04:00-04:59', 'reads': 6282}, {'hour': '05:00-05:59', 'reads': 12794}, {'hour': '06:00-06:59', 'reads': 18395}, {'hour': '07:00-07:59', 'reads': 23032}, {'hour': '08:00-08:59', 'reads': 23383}, {'hour': '09:00-09:59', 'reads': 19794}, {'hour': '10:00-10:59', 'reads': 18376}, {'hour': '11:00-11:59', 'reads': 19959}, {'hour': '12:00-12:59', 'reads': 19090}, {'hour': '13:00-13:59', 'reads': 15832}, {'hour': '14:00-14:59', 'reads': 15043}, {'hour': '15:00-15:59', 'reads': 15832}, {'hour': '16:00-16:59', 'reads': 17762}, {'hour': '17:00-17:59', 'reads': 20387}, {'hour': '18:00-18:59', 'reads': 19269}, {'hour': '19:00-19:59', 'reads': 16194}, {'hour': '20:00-20:59', 'reads': 14642}, {'hour': '21:00-21:59', 'reads': 13198}, {'hour': '22:00-22:59', 'reads': 8142}, {'hour': '23:00-23:59', 'reads': 5974}], 'peak_activity': '08:00-08:59', 'peak_value': 23383}}}}\n",
+      "📍 Step update: {'generate_response': {'response': AIMessage(content='The peak consumption hour for the user segment interested in political debates and crime is from **08:00 to 08:59**, during which there were **23,383 reads**. This indicates a strong morning engagement, likely reflecting readers catching up on news during their commute or early in the day.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 60, 'prompt_tokens': 1758, 'total_tokens': 1818, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_560af6e559', 'id': 'chatcmpl-CXqAggDqM7UcPdXdFQAt2OgAQk9GD', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--d9c05c3a-a195-4e42-a2fe-250322236303-0', usage_metadata={'input_tokens': 1758, 'output_tokens': 60, 'total_tokens': 1818, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}}\n",
+      "\n",
+      "✅ Agent pipeline finished successfully!\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'task_planning': {'plan': [{'task': 'get_segment_time_activity',\n",
+       "     'id': 'time_activity_segment11',\n",
+       "     'analyze_answer': True,\n",
+       "     'analyze_target_property': 'peak_activity',\n",
+       "     'dep': [],\n",
+       "     'args': [{'key': 'segment_id', 'value': '11'}]}]}},\n",
+       " {'validate_plan': {'validation': True}},\n",
+       " {'run_plan': {'outputs': {'time_activity_segment11': {'segment_id': 11,\n",
+       "     'activity_by_hour': [{'hour': '00:00-00:59', 'reads': 3541},\n",
+       "      {'hour': '01:00-01:59', 'reads': 2451},\n",
+       "      {'hour': '02:00-02:59', 'reads': 2103},\n",
+       "      {'hour': '03:00-03:59', 'reads': 3072},\n",
+       "      {'hour': '04:00-04:59', 'reads': 6282},\n",
+       "      {'hour': '05:00-05:59', 'reads': 12794},\n",
+       "      {'hour': '06:00-06:59', 'reads': 18395},\n",
+       "      {'hour': '07:00-07:59', 'reads': 23032},\n",
+       "      {'hour': '08:00-08:59', 'reads': 23383},\n",
+       "      {'hour': '09:00-09:59', 'reads': 19794},\n",
+       "      {'hour': '10:00-10:59', 'reads': 18376},\n",
+       "      {'hour': '11:00-11:59', 'reads': 19959},\n",
+       "      {'hour': '12:00-12:59', 'reads': 19090},\n",
+       "      {'hour': '13:00-13:59', 'reads': 15832},\n",
+       "      {'hour': '14:00-14:59', 'reads': 15043},\n",
+       "      {'hour': '15:00-15:59', 'reads': 15832},\n",
+       "      {'hour': '16:00-16:59', 'reads': 17762},\n",
+       "      {'hour': '17:00-17:59', 'reads': 20387},\n",
+       "      {'hour': '18:00-18:59', 'reads': 19269},\n",
+       "      {'hour': '19:00-19:59', 'reads': 16194},\n",
+       "      {'hour': '20:00-20:59', 'reads': 14642},\n",
+       "      {'hour': '21:00-21:59', 'reads': 13198},\n",
+       "      {'hour': '22:00-22:59', 'reads': 8142},\n",
+       "      {'hour': '23:00-23:59', 'reads': 5974}],\n",
+       "     'peak_activity': '08:00-08:59',\n",
+       "     'peak_value': 23383}}}},\n",
+       " {'generate_response': {'response': AIMessage(content='The peak consumption hour for the user segment interested in political debates and crime is from **08:00 to 08:59**, during which there were **23,383 reads**. This indicates a strong morning engagement, likely reflecting readers catching up on news during their commute or early in the day.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 60, 'prompt_tokens': 1758, 'total_tokens': 1818, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_560af6e559', 'id': 'chatcmpl-CXqAggDqM7UcPdXdFQAt2OgAQk9GD', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--d9c05c3a-a195-4e42-a2fe-250322236303-0', usage_metadata={'input_tokens': 1758, 'output_tokens': 60, 'total_tokens': 1818, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chat.ask(\"What is the peak consumption hours?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4c846fa8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User question: My name is Jose, what's your name?\n",
+      "\n",
+      "🧩 Plan generated successfully.\n",
+      "⚠️ Error generating task plan: 'plan'\n",
+      "📍 Step update: {'task_planning': {'plan': []}}\n",
+      "✅ Plan validation passed.\n",
+      "ℹ️ No tools needed → direct response path.\n",
+      "📍 Step update: {'validate_plan': {'validation': True}}\n",
+      "📍 Step update: {'direct_response': {'response': AIMessage(content='I am ARDI, your AI assistant specialized in audience analytics for a news organization. How can I assist you today with audience insights or news content analysis?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 2858, 'total_tokens': 2889, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 2816}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_560af6e559', 'id': 'chatcmpl-CXqAuyMFi44Xin375WM1OQUVo78jO', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--e21f6d6e-a8f3-4b62-9ed5-0656c065d528-0', usage_metadata={'input_tokens': 2858, 'output_tokens': 31, 'total_tokens': 2889, 'input_token_details': {'audio': 0, 'cache_read': 2816}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}}\n",
+      "\n",
+      "✅ Agent pipeline finished successfully!\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'task_planning': {'plan': []}},\n",
+       " {'validate_plan': {'validation': True}},\n",
+       " {'direct_response': {'response': AIMessage(content='I am ARDI, your AI assistant specialized in audience analytics for a news organization. How can I assist you today with audience insights or news content analysis?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 2858, 'total_tokens': 2889, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 2816}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_560af6e559', 'id': 'chatcmpl-CXqAuyMFi44Xin375WM1OQUVo78jO', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--e21f6d6e-a8f3-4b62-9ed5-0656c065d528-0', usage_metadata={'input_tokens': 2858, 'output_tokens': 31, 'total_tokens': 2889, 'input_token_details': {'audio': 0, 'cache_read': 2816}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chat.ask(\"My name is Jose, what's your name?\")"
    ]
