--- a/playground.ipynb
+++ b/playground.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5999e665",
    "metadata": {},
    "outputs": [
@@ -588,9 +588,9 @@
        "      <td>Find out when segment 10 reads the most, then ...</td>\n",
        "      <td>[get_articles_info, get_segment_articles_by_ti...</td>\n",
        "      <td>[get_articles_info, get_segment_activity_by_da...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>2/3</td>\n",
+       "      <td>1/3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -794,7 +794,7 @@
        "      <th>28</th>\n",
        "      <td>Which topics represent the most recent 3 artic...</td>\n",
        "      <td>[get_segment_articles_by_time, get_top_recent_...</td>\n",
-       "      <td>[get_news_topics_info, get_segment_activity_by...</td>\n",
+       "      <td>[get_news_topics_info, get_segment_articles_by...</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3/3</td>\n",
@@ -803,10 +803,10 @@
        "      <th>29</th>\n",
        "      <td>what user segments have their peak activity in...</td>\n",
        "      <td>[get_segment_activity_by_day_part]</td>\n",
-       "      <td>[get_segment_activity_by_day_part]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1/1</td>\n",
+       "      <td>0/1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -883,7 +883,7 @@
        "2   [get_segment_engagement_stats, get_segment_reg...        2             2   \n",
        "3                             [get_topic_transitions]        1             1   \n",
        "4                           [get_segment_description]        1             1   \n",
-       "5   [get_articles_info, get_segment_activity_by_da...        2             3   \n",
+       "5   [get_articles_info, get_segment_activity_by_da...        1             3   \n",
        "6   [get_news_topics_info, get_segment_articles_by...        4             4   \n",
        "7   [get_news_topics_info, get_news_topics_low_doc...        2             2   \n",
        "8   [get_news_topics_info, get_segment_engage_docs...        3             3   \n",
@@ -906,8 +906,8 @@
        "25      [get_articles_info, get_news_topics_low_docs]        2             2   \n",
        "26  [get_news_topics_info, get_segment_high_rep_do...        2             2   \n",
        "27                              [get_segment_regions]        1             1   \n",
-       "28  [get_news_topics_info, get_segment_activity_by...        3             3   \n",
-       "29                 [get_segment_activity_by_day_part]        1             1   \n",
+       "28  [get_news_topics_info, get_segment_articles_by...        3             3   \n",
+       "29                                                 []        0             1   \n",
        "\n",
        "   match_ratio  \n",
        "0          1/3  \n",
@@ -915,7 +915,7 @@
        "2          2/2  \n",
        "3          1/1  \n",
        "4          1/1  \n",
-       "5          2/3  \n",
+       "5          1/3  \n",
        "6          4/4  \n",
        "7          2/2  \n",
        "8          3/3  \n",
@@ -939,10 +939,10 @@
        "26         2/2  \n",
        "27         1/1  \n",
        "28         3/3  \n",
-       "29         1/1  "
+       "29         0/1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
     "        ON d.user_query = msg.content\n",
     "    -- dataset entry uses assistant content\n",
     "\n",
-    "    WHERE thd.id = 'e9b0fc0f-8b14-47f6-b6fa-859ad8d73b6c'\n",
+    "    WHERE thd.id = '63e30d56-e1b5-46c2-a440-661520ee024f'\n",
     "    ORDER BY msg.content ASC;\n",
     "\"\"\")\n",
     "\n",
